deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-health-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-health
  template:
    metadata:
      labels:
        app: nodejs-health
    spec:
      containers:
      - name: nodejs-health
        image: nikhathmirza/nodejs-health-service:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
