service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-health-service
spec:
  selector:
    app: nodejs-health
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
